# mpsgraph-rs

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MEMORY_MANAGEMENT_TODO.md  README.md  TODO.md  TODO_api_updates.md  Understanding AnyObject vs. NSObject in Rust's obj.md  Writing Modern NSObject Subclasses in Rust with ob.md  build.rs  clean_tensor_ops.rs  mps_test  mpsgraph_executable_test.m  objc2  todo.md
.github/workflows/: macos-tests.yml  test.yml
MetalPerformanceShadersGraph.framework/: MetalPerformanceShadersGraph.tbd
crates/mpsgraph-rs/: Cargo.toml  README.md  build.rs
crates/mpsgraph-rs/examples/: callables_example.rs  callback_test.rs  encode_example.rs  exec_encode.rs  executable_debug.rs  full_flow_example.rs  load_package.rs  matmul.rs  serialization_example.rs  simple_compile.rs  tensor_addition.rs  type_test.rs
crates/mpsgraph-rs/src/: activation_ops.rs  arithmetic_ops.rs  call_ops.rs  command_buffer.rs  control_flow_ops.rs  convolution_ops.rs  convolution_transpose_ops.rs  core.rs  cumulative_ops.rs  data_types.rs  depthwise_convolution_ops.rs  device.rs  executable.rs  fourier_transform_ops.rs  gather_ops.rs  gradient_ops.rs  graph.rs  im2col_ops.rs  lib.rs  linear_algebra_ops.rs  loss_ops.rs  matrix_inverse_ops.rs  matrix_ops.rs  memory_ops.rs  non_maximum_suppression_ops.rs  non_zero_ops.rs  normalization_ops.rs  one_hot_ops.rs  operation.rs  optimizer_ops.rs  pooling_ops.rs  quantization_ops.rs  random_ops.rs  reduction_ops.rs  resize_ops.rs  rnn_ops.rs  sample_grid_ops.rs  scatter_nd_ops.rs  shape.rs  sort_ops.rs  (+8 more)
crates/mpsgraph-rs/src/tests/: activation_ops_tests.rs  arithmetic_ops_tests.rs  command_buffer_tests.rs  core_tests.rs  data_types_tests.rs  depthwise_convolution_ops_tests.rs  device_tests.rs  executable_tests.rs  graph_tests.rs  im2col_ops_tests.rs  matrix_ops_tests.rs  memory_management_tests.rs  mod.rs  optimizer_ops_tests.rs  pooling_ops_tests.rs  random_ops_tests.rs  resize_ops_tests.rs  rnn_ops_tests.rs  serialization_test.rs  sparse_ops_tests.rs  stencil_ops_tests.rs  tensor_addition_test.rs  tensor_data_tests.rs  tensor_tests.rs
crates/mpsgraph-rs/src/utils/: block_wrapper.rs  mod.rs
crates/mpsgraph-tools-rs/: Cargo.toml  README.md  build.rs
crates/mpsgraph-tools-rs/examples/: tensor_operators.rs  tensor_ops.rs
crates/mpsgraph-tools-rs/src/: lib.rs  tensor.rs  tensor_ops.rs
crates/mpsgraph-tools-rs/src/tests/: mod.rs  tensor_ops_tests.rs  tensor_tests.rs
docs/: data_type_attribute_value.md
examples/: callables_example.rs  callback_test.rs  full_flow_example.rs  matmul.rs
src/: activation_ops.rs  arithmetic_ops.rs  call_ops.rs  control_flow_ops.rs  conversion.rs  convolution_ops.rs  convolution_transpose_ops.rs  core.rs  cumulative_ops.rs  data_types.rs  depthwise_convolution_ops.rs  device.rs  executable.rs  fourier_transform_ops.rs  gather_ops.rs  gradient_ops.rs  graph.rs  graph_scalar.rs  im2col_ops.rs  lib.rs  linear_algebra_ops.rs  loss_ops.rs  matrix_inverse_ops.rs  matrix_multiplication_ops.rs  matrix_ops.rs  memory_ops.rs  non_maximum_suppression_ops.rs  non_zero_ops.rs  normalization_ops.rs  one_hot_ops.rs  operation.rs  optimizer_ops.rs  pooling_ops.rs  quantization_ops.rs  random_ops.rs  reduction_ops.rs  resize_ops.rs  sample_grid_ops.rs  scalar_or_tensor.rs  scatter_nd_ops.rs  (+9 more)
src/command_buffer/: command_buffer.rs  command_buffer_status.rs  mod.rs
src/convolution_ops/: convolution_3d_op_descriptor.rs  padding_mode.rs  weights_layout.rs
src/core/: mod.rs  object.rs  padding_mode.rs  padding_style.rs  reduction_mode.rs  shaped_type.rs  tensor_named_data_layout.rs  type.rs
src/core/mps_types/: aliasing_strategy.rs  data_type.rs  dimension_slice.rs  float_data_type_bit.rs  float_data_type_shift.rs  image_coordinate.rs  image_edge_mode.rs  image_feature_channel_format.rs  image_region.rs  kernel_options.rs  mod.rs  offset.rs  origin.rs  region.rs  scale_transform.rs  shape.rs  size.rs
src/device/: compute_device.rs  device.rs  device_type.rs  mod.rs
src/executable/: compilation_descriptor.rs  deployment_platform.rs  executable.rs  executable_completion_handler.rs  executable_execution_descriptor.rs  executable_scheduled_handler.rs  executbale_serialization_descriptor.rs  execution_descriptor.rs  execution_stage.rs  mod.rs  optimization.rs  optimization_profile.rs  serialization_descriptor.rs
src/graph/: graph.rs  graph_options.rs  mod.rs  tensor_data_hash_map.rs  tensor_shaped_type_hash_map.rs
src/ops/: activation_ops.rs  arithmetic_ops.rs  call_ops.rs  convolution_transpose_ops.rs  cumulative_ops.rs  gather_ops.rs  matrix_multiplication_ops.rs  mod.rs
src/ops/control_flow_ops/: control_flow_dependency_block.rs  for_loop_body_block.rs  if_then_else_block.rs  mod.rs  while_after_block.rs  while_before_block.rs
src/ops/convolution_ops/: convolution_2d_op_descriptor.rs  convolution_3d_op_descriptor.rs  convolution_data_layout.rs  device_provider.rs  mod.rs
src/ops/memory_ops/: graph_variable_op.rs  mod.rs
src/ops/quantization_ops/: mod.rs  quantization_arguments.rs
src/ops/tensor_shape_ops/: axes_or_tensor.rs  broadcast_ops.rs  concat_ops.rs  coordinate_ops.rs  expand_dims_ops.rs  flatten_ops.rs  mod.rs  pad_ops.rs  reverse_tensor_ops.rs  slice_gradient.rs  slice_gradient_ops.rs  slice_ops.rs  slice_update_ops.rs  split_ops.rs  squeeze_ops.rs  strided_slice_scalars_or_tensors.rs  tile_ops.rs
src/ops/tensor_shape_ops/slice_ops/: mod.rs  scalars_or_tensors.rs  slice_gradient_ops.rs  slice_ops.rs  slice_update_ops.rs  strided_slice_ops.rs
src/ops/tensor_shape_ops/space_to_batch/: mod.rs  scalars_or_tensors.rs
src/ops/tensor_shape_ops/space_to_depth_ops/: mod.rs  scalars_or_tensors.rs
src/ops/tensor_shape_ops/split_ops/: mod.rs  sizes_or_tensor.rs
src/tests/: convolution_ops_tests.rs  data_types_tests.rs  im2col_ops_tests.rs  mod.rs  rnn_ops_tests.rs  sparse_ops_tests.rs  stencil_ops_tests.rs
src/utils/: block_wrapper.rs  buffer.rs  mod.rs
tests/: matrix_mul_mtlbuffers.rs
