[workspace]
members = ["crates/mpsgraph-rs", "crates/mpsgraph-tools-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Eugene Bokhan <eugenebokhan@icloud.com>"]
repository = "https://github.com/computer-graphics-tools/mpsgraph-rs"

[workspace.dependencies]
objc2 = "0.6.0"
objc2-foundation = "0.3.0"
metal = "0.32.0"
block2 = "0.6.0"
rand = "0.8.0"
bindgen = "0.71.1"
prettydiff = "0.8.0"
