[package]
name = "mpsgraph"
version = "0.1.0"
edition = "2021"
authors = ["Eugene Bokhan <eugenebokhan@protonmail.com>"]
description = "Modern Rust bindings for Apple's Metal Performance Shaders Graph framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mirai-audio/mpsgraph-rs"
keywords = ["metal", "mps", "graph", "neural-network", "apple"]
categories = ["api-bindings", "graphics", "science"]
documentation = "https://docs.rs/mpsgraph"
readme = "README.md"

[dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
metal = { workspace = true }
block2 = { workspace = true }

[dev-dependencies]
prettydiff = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[[example]]
name = "matmul"
path = "examples/matmul.rs"

[[example]]
name = "type_test"
path = "examples/type_test.rs"

[[example]]
name = "callback_test"
path = "examples/callback_test.rs"

[[example]]
name = "simple_compile"
path = "examples/simple_compile.rs"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "aarch64-apple-ios", "x86_64-apple-ios"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.macos]
frameworks = ["MetalPerformanceShaders", "Metal", "Foundation"]

[package.metadata.ios]
frameworks = ["MetalPerformanceShaders", "Metal", "Foundation"]
